--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,24 @@ jobs:
       with:
         go-version: '1.21'
 
-    - name: Build
+    - name: Build app
       run: go build -o price-alert main.go
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+    
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/go_alert:latest
+      env: 
+        COIN_MARKET_CAP_API_KEY: ${{secrets.COIN_MARKET_CAP_API_KEY}}
+        EMAIL_SENDER_ADDRESS: ${{secrets.EMAIL_SENDER_ADDRESS}}
+        EMAIL_SENDER_PASSWORD: ${{secrets.EMAIL_SENDER_PASSWORD}} 
 
